# hanabi

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.example.toml  gallery-dl.conf.example
.github/workflows/: release.yml
deploy/: ai.hanabi.plist  hanabi.service
docs/superpowers/notes/: 2026-06-25-autoforward-calibration.md
docs/superpowers/plans/: 2026-06-07-hanabi.md  2026-06-25-hanabi-improvements.md
docs/superpowers/specs/: 2026-06-07-hanabi-design.md  2026-06-25-hanabi-improvements-design.md
src/: config.rs  gallerydl.rs  lib.rs  main.rs  model.rs  pipeline.rs  store.rs
src/filter/: mod.rs  rules.rs
src/sink/: mod.rs  telegram.rs
src/source/: douyin.rs  mod.rs  pixiv.rs  x.rs
tests/: pipeline.rs
tests/fixtures/: auto_forward_channel.json  pixiv_dump.json  twitter_dump.json
